2003-04-12  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* common/macros.inc: Check __AVR_MEGA__, not FLASHEND [Bug #3184].
	* configure.in (AM_INIT_AUTOMAKE): Bump version.

2003-04-08  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iotn26.h: Add bit defines for USISR and USICR registers.
	[Contributed by Artur Lipowski <LAL@pro.onet.pl>]

2003-04-07  Theodore A. Roth  <troth@openavr.org>

	* include/avr/sleep.h: Add adc mode to sleep type 2 [Bug #3088].

2003-04-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add entry about RAM/variable overlap detection.

2003-04-03  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iotn26.h: Add missing port and bit definitions [Bug #3081]
	[Contributed by Artur Lipowski <LAL@pro.onet.pl>]

2003-03-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/assembler.dox: more explanation about intr. vectors.

2003-03-24  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

2003-03-17  Theodore A. Roth  <troth@openavr.org>

	* include/avr/interrupt.h (enable_external_int): There are now 3
	different registers used by various AVR devices to enable external
	interrupts: EIMSK, GIMSK, and GICR. If one of those is not defined,
	generate a compile time error.

2003-03-17  Theodore A. Roth  <troth@openavr.org>

	* include/avr/pgmspace.h: Document PRG_RDB [Bug #2839].
	Change strncat to strncat_P [Bug #2838].

2003-03-17  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/stdio.h, libc/stdio/fdevopen.c:
	Move dox comment for fdevopen() from stdio.h to fdevopen.c to work
	around a broken html link due to a bug in doxygen. [Bug #2845]

2003-03-03  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

2003-02-28  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* NEWS, doc/api/main_page.dox: Note AT43USB320 support.